Добавляет цвет и шрифти

--- a/css/common.css
+++ b/css/common.css
@@ -3,14 +3,16 @@
     --title-text-color: #212121;
     --accent-color: #2196F3;
     --primery-white-color: #FFFFFF;
-     --secondary-text-color: rgba(255, 255, 255, 0.6);
+    --secondary-text-color: rgba(255, 255, 255, 0.6);
+    --footer-background-color: #2F303A;
     /* var */
 }
 
 body {
-    background: #fff;
-      color: #2a2a2a;
-}
+    background-color: var(--primery-white-color);
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+   }
 /* цвет основого текста #757575 */
 /* заголовок #212121*/
 /* вторичный цвет текста rgba(255, 255, 255, 0.6)*/
@@ -27,11 +29,27 @@ ul {
     background-color: var(--primery-white-color);
 }
 
+.logo {
+    color: var(--title-text-color);
+    font-family: Raleway, sans-serif;
+    font-size: 26px;
+    line-height: 1.2;
+    text-decoration: none;
+}
+
+.page-header .logo-accent {
+    color: var(--accent-color);
+}
 
 /* Site nav */
 
 .site-nav .link{
     color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .site-nav .link:hover,
@@ -43,11 +61,50 @@ ul {
     color: var(--accent-color);
 }
 
-.contact. link{
-    color: var(--title-text-color);
+.contact .link{
+    color: var(--primery-text-color);
+    text-decoration: none;
 }
 
-.contact. link:hover,
-.contact. .link:focus{
+.contact .link:hover,
+.contact .link:focus{
     color: var(--accent-color);
+}
+
+/* Footer */
+.footer{
+    background-color: var(--footer-background-color)
+}
+.logo-accent {
+    color: var(--accent-color);
+    font-style: normal;
+    font-family: Raleway, sans-serif;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.19;
+}
+
+.logo-accent-secondary {
+    color: var(--primery-white-color);
+    font-family: Raleway, sans-serif;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.19;
+}
+
+.post-address {
+    color: var(--primery-white-color);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+}
+
+ .footer-link {
+    color: var(--secondary-text-color);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    text-decoration: none;
 }
