--- a/css/common.css
+++ b/css/common.css
@@ -32,6 +32,7 @@ ul {
 .logo {
     color: var(--title-text-color);
     font-family: Raleway, sans-serif;
+    font-weight: bold;
     font-size: 26px;
     line-height: 1.2;
     text-decoration: none;
