--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,15 @@
 
     /* var */
 }
+ html{
+     box-sizing: border-box;
+ }
+
+  *,
+   *::before,
+   *::after {
+   box-sizing: inherit;
+   }
 
 body {
     background: #fff;
@@ -27,62 +36,122 @@ ul {
 /* Hero */
 .hero {
     background-color: var(--background-color);
+    text-align: center;
+
 }
 .hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
+    padding-top: 200px;
+  
     color: var(--primery-white-color);
    
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
+  
     letter-spacing: 0.06em;
 }
 /* Button */ 
 
 .button {
+    display: inline-block;
+    border: 1px solid transparent;
+    border-radius: 6px;
+    margin-bottom: 200px;
+    padding: 10px 32px;
+    min-width: : 200px;
+
+
     color: var(--primery-white-color);
     background-color: var(--accent-color);
+
     font-size: 16px;
     line-height: 1,87;
     text-decoration: none;
+    text-align: center;
 }
 
 /* Section */
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+    width: 1210px;
+    outline: 2px solid tomato;  
+}
+
+.section {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .section-title {
+    margin-top: 0px;
+    margin-bottom: 50px;
     color: var(--title-text-color);
+
     font-weight: bold;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-}
 
-/* Features */
+    background-color: tomato;
+}
+.container {
+ 
+/* Features */ 
+
+ .feature-list{
+    display: flex;
+    flex-wrap: wrap;
+
+ }
+
+ .feature-list .item {
+    width: 270px;
+    background-color: tomato;
+
+ }
 
 .feature-list .title {
+    margin-top: 0;
+    margin-bottom: 10px;
+
     color: var(--title-text-color);
+
     font-weight: bold;
     font-size: 14px;
     line-height: 1.14;
- }
+}
 
 .feature-list .text {
+    margin-top: 0;
+    margin-bottom: 0px;
+
     color: var(--primery-text-color);
+
     font-weight: normal;
     font-size: 14px;
     line-height: 1,71;
 }
 
-
 /* Team */
-
 .team-list .title {
+    margin-top: 0;
+    margin-bottom: 10px;
+
     color: var(--title-text-color);
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
 }
 
 .team-list .text {
+    margin-top: 0;
+    margin-bottom: 30px;
+
     color: var(--primery-text-color);
     font-weight: normal;
     font-size: 16px;
