Revert "Добавляет хедер и контейнеры"
This reverts commit c664fd348a9e07c70d55d96967b511b0da51480d.

--- a/css/common.css
+++ b/css/common.css
@@ -7,15 +7,6 @@
     --footer-background-color: #2F303A;
     /* var */
 }
- html{
-    box-sizing: border-box;
- }
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-   }
 
 body {
     background-color: var(--primery-white-color);
@@ -29,19 +20,16 @@ body {
 /* белый #FFFFFF /*
 /* background #2F303A (black) ,#E5E5E5 (white), #F5F4FA (blue) */
 
-/* Утилиты */
-
-.list {
-   margin: 0;
+ul {
+    list-style: none;
 }
-
 /* Site header */
 
 .page-header {
     background-color: var(--primery-white-color);
 }
 
-.logo {
+.page-header .logo {
     color: var(--title-text-color);
     font-family: Raleway, sans-serif;
     font-weight: 200;
@@ -50,45 +38,14 @@ body {
     text-decoration: none;
 }
 
-
-.logo-accent {
+.page-header .logo-accent {
     color: var(--accent-color);
 }
 
-/* Main nav */
-
-.main-nav {
-    display: flex;
-    align-items: center;
-}
-
-
 /* Site nav */
-
-.site-nav{
-    display: flex;
-    margin-left: 93px;
-}
-.site-nav .item{
-    margin-bottom: 32px;
-    margin-left: 93px;
-
-}
-/* .site-nav .item:last-child {
-    margin-right: 0;
-} */
-
-/* .site-nav .item:not(:last-child) {
-    margin-right: ;
-} */
-
-.site-nav .item + .item{
-    margin-left: 50px;
-}
 
 .site-nav .link{
     color: var(--title-text-color);
-
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -105,20 +62,7 @@ body {
     color: var(--accent-color);
 }
 
-
- /* Contact */
-
-.contact {
-     display: flex;
-     margin-left: auto;
-}
-
-.contact .item + .item{
-    margin-left: 50px;
-}
-
 .contact .link{
-   
     color: var(--primery-text-color);
     text-decoration: none;
 }
